fix SlaveOk getMore with replica sets for non sharded collections SERVER-2482